SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdepimlibs/; revision=1145753

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -20,6 +20,10 @@ Name[nl]=KAddressbook Instant Messaging-protocol
 Name[nn]=Lynmeldingsprotokoll for KDE-adresseboka
 Name[pt]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[pt_BR]=Protocolo de Mensagens Instantâneas do KAddressbook
+Name[sr]=Брзогласнички протокол К‑адресра
+Name[sr@ijekavian]=Брзогласнички протокол К‑адресра
+Name[sr@ijekavianlatin]=Brzoglasnički protokol K‑adresra
+Name[sr@latin]=Brzoglasnički protokol K‑adresra
 Name[sv]=Addressbokens direktmeddelandeprotokoll
 Name[th]=โพรโทคอลข้อความด่วนทันใจของสมุดที่อยู่-K
 Name[uk]=Протокол миттєвого обміну повідомленнями KAddressbook
