--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -22,6 +22,10 @@ Comment[nn]=AIM-protokoll
 Comment[pt]=Protocolo AIM
 Comment[pt_BR]=Protocolo do AIM
 Comment[ru]=Протокол AIM
+Comment[sr]=Протокол АИМ
+Comment[sr@ijekavian]=Протокол АИМ
+Comment[sr@ijekavianlatin]=Protokol AIM
+Comment[sr@latin]=Protokol AIM
 Comment[sv]=AIM-protokoll
 Comment[th]=โพรโทคอล AIM
 Comment[uk]=Протокол AIM
@@ -47,6 +51,10 @@ Name[nn]=AIM
 Name[pt]=AIM
 Name[pt_BR]=AIM
 Name[ru]=AIM
+Name[sr]=АИМ
+Name[sr@ijekavian]=АИМ
+Name[sr@ijekavianlatin]=AIM
+Name[sr@latin]=AIM
 Name[sv]=AIM
 Name[th]=AIM
 Name[uk]=AIM
