--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -22,6 +22,10 @@ Comment[nn]=Gadu-Gadu-protokoll
 Comment[pt]=Protocolo Gadu-Gadu
 Comment[pt_BR]=Protocolo do Gadu-Gadu
 Comment[ru]=Протокол Gadu-Gadu
+Comment[sr]=Протокол гаду‑гаду
+Comment[sr@ijekavian]=Протокол гаду‑гаду
+Comment[sr@ijekavianlatin]=Protokol Gadu‑Gadu
+Comment[sr@latin]=Protokol Gadu‑Gadu
 Comment[sv]=Gadu-Gadu protokoll
 Comment[th]=โพรโทคอล Gadu-Gadu
 Comment[uk]=Протокол Gadu-Gadu
@@ -47,6 +51,10 @@ Name[nn]=Gadu-Gadu
 Name[pt]=Gadu-Gadu
 Name[pt_BR]=Gadu-Gadu
 Name[ru]=Gadu-Gadu
+Name[sr]=Гаду‑гаду
+Name[sr@ijekavian]=Гаду‑гаду
+Name[sr@ijekavianlatin]=Gadu‑Gadu
+Name[sr@latin]=Gadu‑Gadu
 Name[sv]=Gadu-Gadu
 Name[th]=Gadu-Gadu
 Name[uk]=Gadu-Gadu
