--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -20,6 +20,10 @@ Comment[nl]=Protocol voor Novell GroupWise Messenger
 Comment[nn]=Lynmeldingstenesta Novell GroupWise
 Comment[pt]=Novell GroupWise Messenger
 Comment[pt_BR]=Mensageiro do GroupWise da Novell
+Comment[sr]=Новелов Групвајз месенџер
+Comment[sr@ijekavian]=Новелов Групвајз месенџер
+Comment[sr@ijekavianlatin]=Novellov GroupWise Messenger
+Comment[sr@latin]=Novellov GroupWise Messenger
 Comment[sv]=Novell GroupWise-meddelandeklient
 Comment[th]=ข้อความด่วนทันใจ GroupWise ของโนเวลล์
 Comment[uk]=Програма обміну повідомленнями Novell GroupWise
@@ -43,6 +47,10 @@ Name[nl]=GroupWise
 Name[nn]=GroupWise
 Name[pt]=GroupWise
 Name[pt_BR]=GroupWise
+Name[sr]=Групвајз
+Name[sr@ijekavian]=Групвајз
+Name[sr@ijekavianlatin]=GroupWise
+Name[sr@latin]=GroupWise
 Name[sv]=GroupWise
 Name[th]=GroupWise
 Name[uk]=GroupWise
