--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -22,6 +22,10 @@ Comment[nn]=ICQ-protokoll
 Comment[pt]=Protocolo ICQ
 Comment[pt_BR]=Protocolo do ICQ
 Comment[ru]=Протокол ICQ
+Comment[sr]=Протокол ајсикју
+Comment[sr@ijekavian]=Протокол ајсикју
+Comment[sr@ijekavianlatin]=Protokol ICQ
+Comment[sr@latin]=Protokol ICQ
 Comment[sv]=ICQ-protokoll
 Comment[th]=โพรโทคอล ICQ
 Comment[uk]=Протокол ICQ
@@ -47,6 +51,10 @@ Name[nn]=ICQ
 Name[pt]=ICQ
 Name[pt_BR]=ICQ
 Name[ru]=ICQ
+Name[sr]=ајсикју
+Name[sr@ijekavian]=ајсикју
+Name[sr@ijekavianlatin]=ICQ
+Name[sr@latin]=ICQ
 Name[sv]=ICQ
 Name[th]=ICQ
 Name[uk]=ICQ
