--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -22,6 +22,10 @@ Comment[nn]=Jabber-protokoll
 Comment[pt]=Protocolo Jabber
 Comment[pt_BR]=Protocolo do Jabber
 Comment[ru]=Протокол Jabber
+Comment[sr]=Протокол џабер
+Comment[sr@ijekavian]=Протокол џабер
+Comment[sr@ijekavianlatin]=Protokol Jabber
+Comment[sr@latin]=Protokol Jabber
 Comment[sv]=Jabber-protokoll
 Comment[th]=โพรโทคอล Jabber
 Comment[uk]=Протокол Jabber
@@ -47,6 +51,10 @@ Name[nn]=Jabber
 Name[pt]=Jabber
 Name[pt_BR]=Jabber
 Name[ru]=Jabber
+Name[sr]=Џабер
+Name[sr@ijekavian]=Џабер
+Name[sr@ijekavianlatin]=Jabber
+Name[sr@latin]=Jabber
 Name[sv]=Jabber
 Name[th]=Jabber
 Name[uk]=Jabber
