--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -21,6 +21,10 @@ Comment[nl]=Skype internet-telefonie
 Comment[nn]=Skype Internett-telefoni
 Comment[pt]=Telefonia Internet Skype
 Comment[pt_BR]=Telefonia Internet Skype
+Comment[sr]=Скајп, интернет телефонија
+Comment[sr@ijekavian]=Скајп, интернет телефонија
+Comment[sr@ijekavianlatin]=Skype, internet telefonija
+Comment[sr@latin]=Skype, internet telefonija
 Comment[sv]=Skype Internettelefoni
 Comment[uk]=Інтернет-телефонія Skype
 Comment[x-test]=xxSkype Internet Telephonyxx
@@ -44,6 +48,10 @@ Name[nl]=Skype
 Name[nn]=Skype
 Name[pt]=Skype
 Name[pt_BR]=Skype
+Name[sr]=Скајп
+Name[sr@ijekavian]=Скајп
+Name[sr@ijekavianlatin]=Skype
+Name[sr@latin]=Skype
 Name[sv]=Skype
 Name[th]=Skype
 Name[uk]=Skype
