--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -21,6 +21,10 @@ Comment[nl]=SMS-protocol
 Comment[nn]=SMS-protokoll
 Comment[pt]=Protocolo SMS
 Comment[pt_BR]=Protocolo SMS
+Comment[sr]=Протокол СМС
+Comment[sr@ijekavian]=Протокол СМС
+Comment[sr@ijekavianlatin]=Protokol SMS
+Comment[sr@latin]=Protokol SMS
 Comment[sv]=SMS-protokoll
 Comment[th]=โพรโทคอล SMS
 Comment[uk]=Протокол SMS
@@ -45,6 +49,10 @@ Name[nl]=SMS
 Name[nn]=SMS
 Name[pt]=SMS
 Name[pt_BR]=SMS
+Name[sr]=СМС
+Name[sr@ijekavian]=СМС
+Name[sr@ijekavianlatin]=SMS
+Name[sr@latin]=SMS
 Name[sv]=SMS
 Name[th]=SMS
 Name[uk]=SMS
