--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -20,6 +20,10 @@ Comment[nl]=Internet Relay Chat
 Comment[nn]=Internet Relay Chat
 Comment[pt]=Internet Relay Chat
 Comment[pt_BR]=Bate-papo via Internet (IRC)
+Comment[sr]=Ћаскање путем Интернета
+Comment[sr@ijekavian]=Ћаскање путем Интернета
+Comment[sr@ijekavianlatin]=Ćaskanje putem Interneta
+Comment[sr@latin]=Ćaskanje putem Interneta
 Comment[sv]=Internet Relay Chat
 Comment[uk]=Internet Relay Chat
 Comment[x-test]=xxInternet Relay Chatxx
@@ -44,6 +48,10 @@ Name[nn]=IRC
 Name[pt]=IRC
 Name[pt_BR]=IRC
 Name[ru]=IRC
+Name[sr]=ИРЦ
+Name[sr@ijekavian]=ИРЦ
+Name[sr@ijekavianlatin]=IRC
+Name[sr@latin]=IRC
 Name[sv]=IRC
 Name[th]=IRC
 Name[uk]=IRC
