--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -21,6 +21,10 @@ Comment[nl]=Meanwhile-protocol
 Comment[nn]=Meanwhile-protokoll
 Comment[pt]=Protocolo Meanwhile
 Comment[pt_BR]=Protocolo do Meanwhile
+Comment[sr]=Протокол минвајл
+Comment[sr@ijekavian]=Протокол минвајл
+Comment[sr@ijekavianlatin]=Protokol Meanwhile
+Comment[sr@latin]=Protokol Meanwhile
 Comment[sv]=Meanwhile-protokoll
 Comment[th]=โพรโทคอล Meanwhile
 Comment[uk]=Протокол Meanwhile
@@ -45,6 +49,10 @@ Name[nl]=Meanwhile
 Name[nn]=Meanwhile
 Name[pt]=Meanwhile
 Name[pt_BR]=Meanwhile
+Name[sr]=Минвајл
+Name[sr@ijekavian]=Минвајл
+Name[sr@ijekavianlatin]=Meanwhile
+Name[sr@latin]=Meanwhile
 Name[sv]=Meanwhile
 Name[th]=Meanwhile
 Name[uk]=Meanwhile
