--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -21,6 +21,10 @@ Comment[nl]=MSN Messenger
 Comment[nn]=MSN Messenger
 Comment[pt]=MSN Messenger
 Comment[pt_BR]=MSN Messenger
+Comment[sr]=МСН месенџер
+Comment[sr@ijekavian]=МСН месенџер
+Comment[sr@ijekavianlatin]=MSN Messenger
+Comment[sr@latin]=MSN Messenger
 Comment[sv]=MSN Messenger
 Comment[uk]=MSN Messenger
 Comment[x-test]=xxMSN Messengerxx
@@ -44,6 +48,10 @@ Name[nl]=MSN Messenger
 Name[nn]=MSN Messenger
 Name[pt]=MSN Messenger
 Name[pt_BR]=MSN Messenger
+Name[sr]=МСН месенџер
+Name[sr@ijekavian]=МСН месенџер
+Name[sr@ijekavianlatin]=MSN Messenger
+Name[sr@latin]=MSN Messenger
 Name[sv]=MSN Messenger
 Name[uk]=MSN Messenger
 Name[x-test]=xxMSN Messengerxx
