--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -21,6 +21,10 @@ Comment[nl]=Yahoo-protocol
 Comment[nn]=Yahoo!-protokoll
 Comment[pt]=Protocolo Yahoo
 Comment[pt_BR]=Protocolo do Yahoo
+Comment[sr]=Протокол Јахуа
+Comment[sr@ijekavian]=Протокол Јахуа
+Comment[sr@ijekavianlatin]=Protokol Yahooa
+Comment[sr@latin]=Protokol Yahooa
 Comment[sv]=Yahoo-protokoll
 Comment[th]=โพรโทคอล Yahoo
 Comment[uk]=Протокол Yahoo
@@ -45,6 +49,10 @@ Name[nl]=Yahoo
 Name[nn]=Yahoo
 Name[pt]=Yahoo
 Name[pt_BR]=Yahoo
+Name[sr]=Јаху
+Name[sr@ijekavian]=Јаху
+Name[sr@ijekavianlatin]=Yahoo
+Name[sr@latin]=Yahoo
 Name[sv]=Yahoo
 Name[th]=Yahoo
 Name[uk]=Yahoo
