SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdepimlibs/; revision=1146450

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -11,6 +11,7 @@ Name[de]=Instant-Messaging-Protokoll im KDE-Adressbuch
 Name[en_GB]=KAddressbook Instant Messaging Protocol
 Name[eo]=KAddressbook Rapidmesaĝila Protokolo
 Name[es]=Protocolo de mensajería instantánea de KAddressbook
+Name[et]=KDE aadressiraamatu kiirsuhtlusprotokoll
 Name[fr]=Protocole de messagerie instantanée KAdressbook
 Name[ga]=Prótacal Teachtaireachtaí Meandaracha KAddressbook
 Name[km]=ពិធីការ​ផ្ញើសារ​បន្ទាន់​របស់ KAddressbook
