--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -12,6 +12,7 @@ Comment[de]=AIM-Protokoll
 Comment[en_GB]=AIM Protocol
 Comment[eo]=AIM-Protokolo
 Comment[es]=Protocolo AIM
+Comment[et]=AIM protokoll
 Comment[fr]=Protocole AIM
 Comment[ga]=Prótacal AIM
 Comment[km]=ពិធីការ​ AIM ​​
@@ -41,6 +42,7 @@ Name[de]=AIM
 Name[en_GB]=AIM
 Name[eo]=AIM
 Name[es]=AIM
+Name[et]=AIM
 Name[fr]=AIM
 Name[ga]=AIM
 Name[km]=AIM​
