--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -12,6 +12,7 @@ Comment[de]=ICQ-Protokoll
 Comment[en_GB]=ICQ Protocol
 Comment[eo]=ICQ Protokolo
 Comment[es]=Protocolo ICQ
+Comment[et]=ICQ protokoll
 Comment[fr]=Protocole ICQ
 Comment[ga]=Prótacal ICQ
 Comment[km]=ពិធីការ​ ICQ
@@ -41,6 +42,7 @@ Name[de]=ICQ
 Name[en_GB]=ICQ
 Name[eo]=ICQ
 Name[es]=ICQ
+Name[et]=ICQ
 Name[fr]=ICQ
 Name[ga]=ICQ
 Name[km]=ICQ
