--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -12,6 +12,7 @@ Comment[de]=Jabber-Protokoll
 Comment[en_GB]=Jabber Protocol
 Comment[eo]=Jabber Protokolo
 Comment[es]=Protocolo Jabber
+Comment[et]=Jabberi protokoll
 Comment[fr]=Protocole Jabber
 Comment[ga]=Prótacal Jabber
 Comment[km]=ពិធី​​ការ​ Jabber
@@ -41,6 +42,7 @@ Name[de]=Jabber
 Name[en_GB]=Jabber
 Name[eo]=Jabber
 Name[es]=Jabber
+Name[et]=Jabber
 Name[fr]=Jabber
 Name[ga]=Jabber
 Name[km]=Jabber
