--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -12,6 +12,7 @@ Comment[de]=MSN-Nachrichtendienst
 Comment[en_GB]=MSN Messenger
 Comment[eo]=MSN Mesaĝilo
 Comment[es]=MSN Messenger
+Comment[et]=MSN Messenger
 Comment[fr]=Messagerie MSN
 Comment[ga]=MSN Messenger
 Comment[km]=កម្មវិធី​ផ្ញើសារ MSN
@@ -39,6 +40,7 @@ Name[de]=MSN Messenger
 Name[en_GB]=MSN Messenger
 Name[eo]=MSN mesaĝilo
 Name[es]=MSN Messenger
+Name[et]=MSN Messenger
 Name[fr]=Messagerie MSN
 Name[ga]=MSN Messenger
 Name[km]=កម្មវិធី​ផ្ញើសារ MSN
