--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -12,6 +12,7 @@ Comment[de]=SMS-Protokoll
 Comment[en_GB]=SMS Protocol
 Comment[eo]=SMS Protokolo
 Comment[es]=Protocolo SMS
+Comment[et]=SMS protokoll
 Comment[fr]=Protocole SMS
 Comment[ga]=Prótacal SMS
 Comment[km]=ពិធីការ​ SMS ​​
@@ -40,6 +41,7 @@ Name[de]=SMS
 Name[en_GB]=SMS
 Name[eo]=SMS
 Name[es]=SMS
+Name[et]=SMS
 Name[fr]=SMS
 Name[ga]=SMS
 Name[km]=SMS
