--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -12,6 +12,7 @@ Comment[de]=Yahoo-Protokoll
 Comment[en_GB]=Yahoo Protocol
 Comment[eo]=Yahoo Protokolo
 Comment[es]=Protocolo Yahoo
+Comment[et]=Yahoo protokoll
 Comment[fr]=Protocole Yahoo
 Comment[ga]=Prótacal Yahoo
 Comment[km]=ពិធីការ​យ៉ាហ៊ូ​
@@ -40,6 +41,7 @@ Name[de]=Yahoo
 Name[en_GB]=Yahoo
 Name[eo]=Yahoo
 Name[es]=Yahoo
+Name[et]=Yahoo
 Name[fr]=Yahoo
 Name[ga]=Yahoo
 Name[km]=យ៉ាហ៊ូ​
