--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -12,6 +12,7 @@ Comment[de]=Gadu-Gadu-Protokoll
 Comment[en_GB]=Gadu-Gadu Protocol
 Comment[eo]=Gadu-Gadu Protokolo
 Comment[es]=Protocolo Gadu-Gadu
+Comment[et]=Gadu-Gadu protokoll
 Comment[fr]=Protocole Gadu-Gadu
 Comment[ga]=Prótacal Gadu-Gadu
 Comment[km]=ពិធីការ​ Gadu-Gadu
@@ -41,6 +42,7 @@ Name[de]=Gadu-Gadu
 Name[en_GB]=Gadu-Gadu
 Name[eo]=Gadu-Gadu
 Name[es]=Gadu-Gadu
+Name[et]=Gadu-Gadu
 Name[fr]=Gadu-Gadu
 Name[ga]=Gadu-Gadu
 Name[km]=Gadu-Gadu
