--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -11,6 +11,7 @@ Comment[da]=Novell GroupWise Messenger
 Comment[de]=Novell-GroupWise-Nachrichtendienst
 Comment[en_GB]=Novell GroupWise Messenger
 Comment[eo]=Novell GroupWise mesaĝilo
+Comment[et]=Novell GroupWise Messenger
 Comment[fr]=Messagerie GroupWise Novell
 Comment[ga]=Teachtaire Novell GroupWise
 Comment[km]=កម្មវិធី​ផ្ញើសារ​របស់ Novell GroupWise
@@ -38,6 +39,7 @@ Name[da]=GroupWise
 Name[de]=GroupWise
 Name[en_GB]=GroupWise
 Name[eo]=GroupWise
+Name[et]=GroupWise
 Name[fr]=GroupWise
 Name[ga]=GroupWise
 Name[km]=GroupWise​
