--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -11,6 +11,7 @@ Comment[da]=Internet Relay Chat
 Comment[de]=Internet Relay Chat
 Comment[en_GB]=Internet Relay Chat
 Comment[eo]=Interreta plusenda babilado
+Comment[et]=Rühmadiskussioon internetis
 Comment[fr]=Relai Internet de discussion
 Comment[ga]=Internet Relay Chat
 Comment[km]=ជជែកកំសាន្ត​បញ្ជូន​តាម​អ៊ីនធឺណិត​
@@ -38,6 +39,7 @@ Name[de]=IRC
 Name[en_GB]=IRC
 Name[eo]=IRC
 Name[es]=IRC
+Name[et]=IRC
 Name[fr]=IRC
 Name[ga]=IRC
 Name[km]=IRC​
