--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -12,6 +12,7 @@ Comment[de]=Meanwhile-Protokoll
 Comment[en_GB]=Meanwhile Protocol
 Comment[eo]=Meanwhile Protokolo
 Comment[es]=Protocolo Meanwhile
+Comment[et]=Meanwhile'i protokoll
 Comment[fr]=Protocole Meanwhile
 Comment[ga]=Prótacal Meanwhile
 Comment[km]=ពិធីការ​ Meanwhile
@@ -40,6 +41,7 @@ Name[de]=Meanwhile
 Name[en_GB]=Meanwhile
 Name[eo]=Meanwhile
 Name[es]=Meanwhile
+Name[et]=Meanwhile
 Name[fr]=Meanwhile
 Name[ga]=Meanwhile
 Name[km]=Meanwhile
