--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -12,6 +12,7 @@ Comment[de]=Skype-Internettelefonie
 Comment[en_GB]=Skype Internet Telephony
 Comment[eo]=Skype Interreta Telefonado
 Comment[es]=Telefonía por internet de Skype
+Comment[et]=Internetitelefon Skype
 Comment[fr]=Téléphonie sur internet Skype
 Comment[ga]=Teileafónaíocht Idirlín Skype
 Comment[km]=ទូរស័ព្ទ​តាម​អ៊ីនធឺណិត​ ​Skype​
@@ -39,6 +40,7 @@ Name[de]=Skype
 Name[en_GB]=Skype
 Name[eo]=kype
 Name[es]=Skype
+Name[et]=Skype
 Name[fr]=Skype
 Name[ga]=Skype
 Name[km]=Skype
