more compiling work
svn path=/branches/work/kcalutils/; revision=1147515

--- a/kcalutils/CMakeLists.txt
+++ b/kcalutils/CMakeLists.txt
@@ -32,8 +32,7 @@ set(kcalutils_LIB_SRCS
   icaldrag.cpp
 #KDAB_TODO:
 #  incidenceformatter.cpp
-#KDAB_TODO:
-#  stringutils.cpp
+  stringify.cpp
   vcaldrag.cpp
 )
 
