--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,22 +8,22 @@ set(kalarm_calendar_LIB_SRCS
 	datetime.cpp
 	version.cpp
 )
-if(BUILD_akonadi)
+if(KALARM_USE_AKONADI)
     set(kalarm_calendar_LIB_SRCS ${kalarm_calendar_LIB_SRCS}
 	collectionattribute.cpp
 	eventattribute.cpp
     )
-endif(BUILD_akonadi)
+endif(KALARM_USE_AKONADI)
 
 kde4_add_library(kalarm_calendar SHARED ${kalarm_calendar_LIB_SRCS})
 
-if(BUILD_akonadi)
+if(KALARM_USE_AKONADI)
   target_link_libraries(kalarm_calendar ${KDEPIMLIBS_AKONADI_LIBS} ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS})
   target_link_libraries(kalarm_calendar LINK_INTERFACE_LIBRARIES ${KDEPIMLIBS_AKONADI_LIBS} ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS})
-else(BUILD_akonadi)
+else(KALARM_USE_AKONADI)
   target_link_libraries(kalarm_calendar ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS})
   target_link_libraries(kalarm_calendar LINK_INTERFACE_LIBRARIES ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS})
-endif(BUILD_akonadi)
+endif(KALARM_USE_AKONADI)
 
 set_target_properties(kalarm_calendar PROPERTIES 
    VERSION ${GENERIC_LIB_VERSION} 
