--- a/kpimutils/CMakeLists.txt
+++ b/kpimutils/CMakeLists.txt
@@ -14,6 +14,10 @@ kde4_add_library(kpimutils SHARED ${kpimutils_LIB_SRCS})
 
 target_link_libraries(kpimutils ${KDE4_KDEUI_LIBS} ${KDE4_KEMOTICONS_LIBS} kmime)
 
+if(WINCE)
+target_link_libraries(kpimutils ${WCECOMPAT_LIBRARIES} toolhelp)
+endif(WINCE)
+
 set_target_properties(kpimutils PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
 install(TARGETS kpimutils EXPORT kdepimlibsLibraryTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
 
