Revert "Use the new descendants proxy, it's more correct."
This reverts commit 1149845.

svn path=/branches/KDE/4.5/kdepimlibs/; revision=1149906

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -113,7 +113,7 @@ set( akonadikde_LIB_SRC
   itemsync.cpp
   itemview.cpp
   job.cpp
-  kdescendantsproxymodel2.cpp
+  kdescendantsproxymodel.cpp
   kjobprivatebase.cpp
   krecursivefilterproxymodel.cpp
   linkjob.cpp
