Add the new KCalUtils library that sits on top of KCalCore and handles user interaction functionality.
CCMAIL: kde-pim@kde.org

svn path=/trunk/KDE/kdepimlibs/; revision=1151295

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,6 +113,7 @@ if (NOT KDEPIM_ONLY_KLEO)
   add_subdirectory(kblog)
   add_subdirectory(kcal)
   add_subdirectory(kcalcore)
+  add_subdirectory(kcalutils)
   add_subdirectory(akonadi) # depends on kabc is build
   add_subdirectory(kholidays)
   add_subdirectory(kimap)
