--- a/KdepimLibsConfig.cmake.in
+++ b/KdepimLibsConfig.cmake.in
@@ -75,6 +75,7 @@ _kdepimlibs_set_lib_vars(KABC           kabc)
 _kdepimlibs_set_lib_vars(KBLOG          kblog)
 _kdepimlibs_set_lib_vars(KCAL           kcal)
 _kdepimlibs_set_lib_vars(KCALCORE       kcalcore)
+_kdepimlibs_set_lib_vars(KCALUTILS      kcalutils)
 _kdepimlibs_set_lib_vars(KHOLIDAYS      kholidays)
 _kdepimlibs_set_lib_vars(KIMAP          kimap)
 _kdepimlibs_set_lib_vars(KLDAP          kldap)
