--- a/kcalutils/CMakeLists.txt
+++ b/kcalutils/CMakeLists.txt
@@ -1,26 +1,6 @@
 project(kcalutils)
 
-#TODO: run cmakelint.pl on this file
-
-#TODO: if this library goes into kdepim (instead of kdepimlibs), you should
-# 1. replace "kcalcore" with a KDEPIMLIBS_KCALCORE_LIBS variable
-# 2. replace "kpimutils" with KDEPIMLIBS_KPIMUTILS_LIBS variable
-# 3. install the headers
-
-### TODO: All these lines can be removed once this library is integrated back into KDE SC
-set (QT_MIN_VERSION "4.6.0")
-find_package(KDE4 4.4.0 REQUIRED)
-include(KDE4Defaults)
-include(MacroLibrary)
-
-add_definitions(${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
-include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${KDE4_INCLUDES})
-### End
-
-###########################################################
-
-#TODO: reserve a proper debug area for this library and use it
-add_definitions(-DKDE_DEFAULT_DEBUG_AREA=5801)
+add_definitions(-DKDE_DEFAULT_DEBUG_AREA=5820)
 
 if(KDE4_BUILD_TESTS)
   add_definitions(-DCOMPILING_TESTS)
@@ -49,7 +29,7 @@ kde4_add_library(kcalutils SHARED ${kcalutils_LIB_SRCS})
 
 target_link_libraries(kcalutils ${KDE4_KDECORE_LIBRARY} ${KDE4_KDEUI_LIBRARY} ${KDE4_KIO_LIBS} kcalcore kpimutils ${QT_QTGUI_LIBRARY})
 set_target_properties(kcalutils PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION})
-install(TARGETS kcalutils ${INSTALL_TARGETS_DEFAULT_ARGS})
+install(TARGETS kcalutils EXPORT kdepimlibsLibraryTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 ########### next target ###############
 
@@ -57,12 +37,11 @@ add_subdirectory(tests)
 
 ########### install files ###############
 
-#TODO: install the headers if we go into kdepimlibs
-#install(FILES
-#  dndfactory.h
-#  htmlexport.h
-#  icaldrag.h
-#  incidenceformatter.h
-#  kcalutils_export.h
-#  vcaldrag.h
-#  DESTINATION ${INCLUDE_INSTALL_DIR}/kcalutils COMPONENT Devel)
+install(FILES
+  dndfactory.h
+  htmlexport.h
+  icaldrag.h
+  incidenceformatter.h
+  kcalutils_export.h
+  vcaldrag.h
+  DESTINATION ${INCLUDE_INSTALL_DIR}/kcalutils COMPONENT Devel)
