these headers are needed
svn path=/trunk/KDE/kdepimlibs/; revision=1151746

--- a/kcalutils/CMakeLists.txt
+++ b/kcalutils/CMakeLists.txt
@@ -44,4 +44,6 @@ install(FILES
   incidenceformatter.h
   kcalutils_export.h
   vcaldrag.h
+  scheduler.h
+  stringify.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/kcalutils COMPONENT Devel)
