SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdepimlibs/; revision=1152799

--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -14,6 +14,7 @@ Comment[eo]=Gadu-Gadu Protokolo
 Comment[es]=Protocolo Gadu-Gadu
 Comment[et]=Gadu-Gadu protokoll
 Comment[fr]=Protocole Gadu-Gadu
+Comment[ga]=Prótacal Gadu-Gadu
 Comment[km]=ពិធីការ​ Gadu-Gadu
 Comment[nb]=Gadu-Gadu-protokoll
 Comment[nds]=Gadu-Gadu-Protokoll
@@ -43,6 +44,7 @@ Name[eo]=Gadu-Gadu
 Name[es]=Gadu-Gadu
 Name[et]=Gadu-Gadu
 Name[fr]=Gadu-Gadu
+Name[ga]=Gadu-Gadu
 Name[km]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
 Name[nds]=Gadu-Gadu
