--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -13,6 +13,7 @@ Comment[en_GB]=Novell GroupWise Messenger
 Comment[eo]=Novell GroupWise mesaĝilo
 Comment[et]=Novell GroupWise Messenger
 Comment[fr]=Messagerie GroupWise Novell
+Comment[ga]=Teachtaire Novell GroupWise
 Comment[km]=កម្មវិធី​ផ្ញើសារ​របស់ Novell GroupWise
 Comment[nb]=Novell GroupWise meldingsprogram
 Comment[nds]=Novell-GroupWise-Kortnarichtenmaker
@@ -40,6 +41,7 @@ Name[en_GB]=GroupWise
 Name[eo]=GroupWise
 Name[et]=GroupWise
 Name[fr]=GroupWise
+Name[ga]=GroupWise
 Name[km]=GroupWise​
 Name[nb]=GroupWise
 Name[nds]=GroupWise
