--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -14,6 +14,7 @@ Comment[eo]=ICQ Protokolo
 Comment[es]=Protocolo ICQ
 Comment[et]=ICQ protokoll
 Comment[fr]=Protocole ICQ
+Comment[ga]=Prótacal ICQ
 Comment[km]=ពិធីការ​ ICQ
 Comment[nb]=ICQ-protokoll
 Comment[nds]=ICQ-Protokoll
@@ -43,6 +44,7 @@ Name[eo]=ICQ
 Name[es]=ICQ
 Name[et]=ICQ
 Name[fr]=ICQ
+Name[ga]=ICQ
 Name[km]=ICQ
 Name[nb]=ICQ
 Name[nds]=ICQ
