--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -14,6 +14,7 @@ Comment[eo]=Jabber Protokolo
 Comment[es]=Protocolo Jabber
 Comment[et]=Jabberi protokoll
 Comment[fr]=Protocole Jabber
+Comment[ga]=Prótacal Jabber
 Comment[km]=ពិធី​​ការ​ Jabber
 Comment[nb]=Jabber-protokoll
 Comment[nds]=Jabber-Protokoll
@@ -43,6 +44,7 @@ Name[eo]=Jabber
 Name[es]=Jabber
 Name[et]=Jabber
 Name[fr]=Jabber
+Name[ga]=Jabber
 Name[km]=Jabber
 Name[nb]=Jabber
 Name[nds]=Jabber
