--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -14,6 +14,7 @@ Comment[eo]=Meanwhile Protokolo
 Comment[es]=Protocolo Meanwhile
 Comment[et]=Meanwhile'i protokoll
 Comment[fr]=Protocole Meanwhile
+Comment[ga]=Prótacal Meanwhile
 Comment[km]=ពិធីការ​ Meanwhile
 Comment[nb]=Meanwhile-protokoll
 Comment[nds]=Meanwhile-Protokoll
@@ -42,6 +43,7 @@ Name[eo]=Meanwhile
 Name[es]=Meanwhile
 Name[et]=Meanwhile
 Name[fr]=Meanwhile
+Name[ga]=Meanwhile
 Name[km]=Meanwhile
 Name[nb]=Meanwhile
 Name[nds]=Meanwhile
