--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -14,6 +14,7 @@ Comment[eo]=SMS Protokolo
 Comment[es]=Protocolo SMS
 Comment[et]=SMS protokoll
 Comment[fr]=Protocole SMS
+Comment[ga]=Prótacal SMS
 Comment[km]=ពិធីការ​ SMS ​​
 Comment[nb]=SMS Protokoll
 Comment[nds]=SMS-Protokoll
@@ -42,6 +43,7 @@ Name[eo]=SMS
 Name[es]=SMS
 Name[et]=SMS
 Name[fr]=SMS
+Name[ga]=SMS
 Name[km]=SMS
 Name[nb]=SMS
 Name[nds]=SMS
