--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -14,6 +14,7 @@ Comment[eo]=Yahoo Protokolo
 Comment[es]=Protocolo Yahoo
 Comment[et]=Yahoo protokoll
 Comment[fr]=Protocole Yahoo
+Comment[ga]=Prótacal Yahoo
 Comment[km]=ពិធីការ​យ៉ាហ៊ូ​
 Comment[nb]=Yahoo-protokoll
 Comment[nds]=Yahoo-Protokoll
@@ -42,6 +43,7 @@ Name[eo]=Yahoo
 Name[es]=Yahoo
 Name[et]=Yahoo
 Name[fr]=Yahoo
+Name[ga]=Yahoo
 Name[km]=យ៉ាហ៊ូ​
 Name[nb]=Yahoo
 Name[nds]=Yahoo
