add CamelCase headers for KCalCore
svn path=/trunk/KDE/kdepimlibs/; revision=1153116

--- a/includes/CMakeLists.txt
+++ b/includes/CMakeLists.txt
@@ -11,6 +11,7 @@ install_headers( KHolidays )
 install_headers( KABC )
 install_headers( KBlog )
 install_headers( KCal )
+install_headers( KCalCore )
 install_headers( KIMAP )
 install_headers( KLDAP )
 install_headers( KMime )
