add CamelCase headers for KCalUtils
svn path=/trunk/KDE/kdepimlibs/; revision=1153119

--- a/includes/CMakeLists.txt
+++ b/includes/CMakeLists.txt
@@ -12,6 +12,7 @@ install_headers( KABC )
 install_headers( KBlog )
 install_headers( KCal )
 install_headers( KCalCore )
+install_headers( KCalUtils )
 install_headers( KIMAP )
 install_headers( KLDAP )
 install_headers( KMime )
