SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1153901

--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -14,6 +14,7 @@ Comment[eo]=Novell GroupWise mesaĝilo
 Comment[et]=Novell GroupWise Messenger
 Comment[fr]=Messagerie GroupWise Novell
 Comment[ga]=Teachtaire Novell GroupWise
+Comment[it]=Novell GroupWise Messenger
 Comment[km]=កម្មវិធី​ផ្ញើសារ​របស់ Novell GroupWise
 Comment[nb]=Novell GroupWise meldingsprogram
 Comment[nds]=Novell-GroupWise-Kortnarichtenmaker
@@ -42,6 +43,7 @@ Name[eo]=GroupWise
 Name[et]=GroupWise
 Name[fr]=GroupWise
 Name[ga]=GroupWise
+Name[it]=GroupWise
 Name[km]=GroupWise​
 Name[nb]=GroupWise
 Name[nds]=GroupWise
