--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Telefonía por internet de Skype
 Comment[et]=Internetitelefon Skype
 Comment[fr]=Téléphonie sur internet Skype
 Comment[ga]=Teileafónaíocht Idirlín Skype
+Comment[it]=Telefonia su Internet di Skype
 Comment[km]=ទូរស័ព្ទ​តាម​អ៊ីនធឺណិត​ ​Skype​
 Comment[nb]=Skype IP-telefoni
 Comment[nds]=Internet-Telefoneren mit Skype
@@ -43,6 +44,7 @@ Name[es]=Skype
 Name[et]=Skype
 Name[fr]=Skype
 Name[ga]=Skype
+Name[it]=Skype
 Name[km]=Skype
 Name[nb]=Skype
 Name[nds]=Skype
