--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo SMS
 Comment[et]=SMS protokoll
 Comment[fr]=Protocole SMS
 Comment[ga]=Prótacal SMS
+Comment[it]=Protocollo SMS
 Comment[km]=ពិធីការ​ SMS ​​
 Comment[nb]=SMS Protokoll
 Comment[nds]=SMS-Protokoll
@@ -44,6 +45,7 @@ Name[es]=SMS
 Name[et]=SMS
 Name[fr]=SMS
 Name[ga]=SMS
+Name[it]=SMS
 Name[km]=SMS
 Name[nb]=SMS
 Name[nds]=SMS
