--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -14,6 +14,7 @@ Name[es]=Protocolo de mensajería instantánea de KAddressbook
 Name[et]=KDE aadressiraamatu kiirsuhtlusprotokoll
 Name[fr]=Protocole de messagerie instantanée KAdressbook
 Name[ga]=Prótacal Teachtaireachtaí Meandaracha KAddressbook
+Name[it]=Protocollo di messaggi istantanei di KAddressbook
 Name[km]=ពិធីការ​ផ្ញើសារ​បន្ទាន់​របស់ KAddressbook
 Name[nb]=KAdressbook lynmeldingsprotokoll
 Name[nds]=KAddressbook-Kortnarichten-Protokoll
