--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo Gadu-Gadu
 Comment[et]=Gadu-Gadu protokoll
 Comment[fr]=Protocole Gadu-Gadu
 Comment[ga]=Prótacal Gadu-Gadu
+Comment[it]=Protocollo Gadu-Gadu
 Comment[km]=ពិធីការ​ Gadu-Gadu
 Comment[nb]=Gadu-Gadu-protokoll
 Comment[nds]=Gadu-Gadu-Protokoll
@@ -45,6 +46,7 @@ Name[es]=Gadu-Gadu
 Name[et]=Gadu-Gadu
 Name[fr]=Gadu-Gadu
 Name[ga]=Gadu-Gadu
+Name[it]=Gadu-Gadu
 Name[km]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
 Name[nds]=Gadu-Gadu
