--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo ICQ
 Comment[et]=ICQ protokoll
 Comment[fr]=Protocole ICQ
 Comment[ga]=Prótacal ICQ
+Comment[it]=Protocollo ICQ
 Comment[km]=ពិធីការ​ ICQ
 Comment[nb]=ICQ-protokoll
 Comment[nds]=ICQ-Protokoll
@@ -45,6 +46,7 @@ Name[es]=ICQ
 Name[et]=ICQ
 Name[fr]=ICQ
 Name[ga]=ICQ
+Name[it]=ICQ
 Name[km]=ICQ
 Name[nb]=ICQ
 Name[nds]=ICQ
