--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo Jabber
 Comment[et]=Jabberi protokoll
 Comment[fr]=Protocole Jabber
 Comment[ga]=Prótacal Jabber
+Comment[it]=Protocollo Jabber
 Comment[km]=ពិធី​​ការ​ Jabber
 Comment[nb]=Jabber-protokoll
 Comment[nds]=Jabber-Protokoll
@@ -45,6 +46,7 @@ Name[es]=Jabber
 Name[et]=Jabber
 Name[fr]=Jabber
 Name[ga]=Jabber
+Name[it]=Jabber
 Name[km]=Jabber
 Name[nb]=Jabber
 Name[nds]=Jabber
