--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=MSN Messenger
 Comment[et]=MSN Messenger
 Comment[fr]=Messagerie MSN
 Comment[ga]=MSN Messenger
+Comment[it]=MSN Messenger
 Comment[km]=កម្មវិធី​ផ្ញើសារ MSN
 Comment[nb]=MSN Messenger
 Comment[nds]=MSN-Kortnarichtenmaker
@@ -43,6 +44,7 @@ Name[es]=MSN Messenger
 Name[et]=MSN Messenger
 Name[fr]=Messagerie MSN
 Name[ga]=MSN Messenger
+Name[it]=MSN Messenger
 Name[km]=កម្មវិធី​ផ្ញើសារ MSN
 Name[nb]=MSN Messenger
 Name[nds]=MSN-Kortnarichtenmaker
