Add freebusyperiod unit tests, as well as datastream operators.
svn path=/trunk/KDE/kdepimlibs/; revision=1154160

--- a/kcalcore/tests/CMakeLists.txt
+++ b/kcalcore/tests/CMakeLists.txt
@@ -35,6 +35,7 @@ KCALCORE_UNIT_TESTS(
   testjournal
   testmemorycalendar
   testperiod
+  testfreebusyperiod
   testperson
   testsortablelist
   testtodo
