SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdepimlibs/; revision=1154197

--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -28,6 +28,7 @@ Comment[sr@latin]=Novellov GroupWise Messenger
 Comment[sv]=Novell GroupWise-meddelandeklient
 Comment[th]=ข้อความด่วนทันใจ GroupWise ของโนเวลล์
 Comment[uk]=Програма обміну повідомленнями Novell GroupWise
+Comment[wa]=Messaedjî Novell GroupWise
 Comment[x-test]=xxNovell GroupWise Messengerxx
 Comment[zh_CN]=Novell GroupWise Messenger
 Comment[zh_TW]=Novell GroupWise 即時訊息
@@ -56,6 +57,7 @@ Name[sr@latin]=GroupWise
 Name[sv]=GroupWise
 Name[th]=GroupWise
 Name[uk]=GroupWise
+Name[wa]=GroupWise
 Name[x-test]=xxGroupWisexx
 Name[zh_CN]=GroupWise
 Name[zh_TW]=GroupWise
