--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -27,6 +27,7 @@ Comment[sr@ijekavianlatin]=Ćaskanje putem Interneta
 Comment[sr@latin]=Ćaskanje putem Interneta
 Comment[sv]=Internet Relay Chat
 Comment[uk]=Internet Relay Chat
+Comment[wa]=Internet Relay Chat
 Comment[x-test]=xxInternet Relay Chatxx
 Comment[zh_CN]=IRC
 Comment[zh_TW]=IRC
@@ -57,6 +58,7 @@ Name[sr@latin]=IRC
 Name[sv]=IRC
 Name[th]=IRC
 Name[uk]=IRC
+Name[wa]=IRC
 Name[x-test]=xxIRCxx
 Name[zh_CN]=IRC
 Name[zh_TW]=IRC
