--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -28,6 +28,7 @@ Comment[sr@ijekavianlatin]=MSN Messenger
 Comment[sr@latin]=MSN Messenger
 Comment[sv]=MSN Messenger
 Comment[uk]=MSN Messenger
+Comment[wa]=MSN Messenger
 Comment[x-test]=xxMSN Messengerxx
 Comment[zh_CN]=MSN Messenger
 Comment[zh_TW]=MSN
@@ -56,6 +57,7 @@ Name[sr@ijekavianlatin]=MSN Messenger
 Name[sr@latin]=MSN Messenger
 Name[sv]=MSN Messenger
 Name[uk]=MSN Messenger
+Name[wa]=MSN Messenger
 Name[x-test]=xxMSN Messengerxx
 Name[zh_CN]=MSN Messenger
 Name[zh_TW]=MSN
