--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -28,6 +28,7 @@ Comment[sr@ijekavianlatin]=Skype, internet telefonija
 Comment[sr@latin]=Skype, internet telefonija
 Comment[sv]=Skype Internettelefoni
 Comment[uk]=Інтернет-телефонія Skype
+Comment[wa]=Telefoneye sol Daegntoele Skype
 Comment[x-test]=xxSkype Internet Telephonyxx
 Comment[zh_CN]=Skype 互联网电话
 Comment[zh_TW]=Skype 網路電話
@@ -57,6 +58,7 @@ Name[sr@latin]=Skype
 Name[sv]=Skype
 Name[th]=Skype
 Name[uk]=Skype
+Name[wa]=Skype
 Name[x-test]=xxSkypexx
 Name[zh_CN]=Skype
 Name[zh_TW]=Skype
