--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -29,6 +29,7 @@ Comment[sr@latin]=Protokol SMS
 Comment[sv]=SMS-protokoll
 Comment[th]=โพรโทคอล SMS
 Comment[uk]=Протокол SMS
+Comment[wa]=Protocole SMS
 Comment[x-test]=xxSMS Protocolxx
 Comment[zh_CN]=短消息协议
 Comment[zh_TW]=SMS 協定
@@ -58,6 +59,7 @@ Name[sr@latin]=SMS
 Name[sv]=SMS
 Name[th]=SMS
 Name[uk]=SMS
+Name[wa]=SMS
 Name[x-test]=xxSMSxx
 Name[zh_CN]=SMS
 Name[zh_TW]=SMS
