--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -29,6 +29,7 @@ Comment[sr@latin]=Protokol Yahooa
 Comment[sv]=Yahoo-protokoll
 Comment[th]=โพรโทคอล Yahoo
 Comment[uk]=Протокол Yahoo
+Comment[wa]=Protocole Yahoo
 Comment[x-test]=xxYahoo Protocolxx
 Comment[zh_CN]=Yahoo 协议
 Comment[zh_TW]=Yahoo 協定
@@ -58,6 +59,7 @@ Name[sr@latin]=Yahoo
 Name[sv]=Yahoo
 Name[th]=Yahoo
 Name[uk]=Yahoo
+Name[wa]=Yahoo
 Name[x-test]=xxYahooxx
 Name[zh_CN]=Yahoo
 Name[zh_TW]=Yahoo
