--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -41,6 +41,7 @@ Name[sv]=Kontaktåtgärder
 Name[th]=การกระทำต่าง ๆ ของที่อยู่ติดต่อ
 Name[tr]=Kişi Eylemleri
 Name[uk]=Дії контакту
+Name[wa]=Accions des contaks
 Name[x-test]=xxContact Actionsxx
 Name[zh_CN]=联系人动作
 Name[zh_TW]=聯絡人動作
@@ -77,6 +78,7 @@ Comment[sv]=Anpassa kontaktåtgärder
 Comment[th]=ปรับแต่งการกระทำต่าง ๆ ของที่อยู่ติดต่อ
 Comment[tr]=Kişi Eylemlerini Yapılandır
 Comment[uk]=Налаштування дій для контакту
+Comment[wa]=Apontyî ls accions des contaks
 Comment[x-test]=xxConfigure the Contact Actionsxx
 Comment[zh_CN]=配置联系人动作
 Comment[zh_TW]=設定聯絡人動作
