--- a/kcal/kcal_manager.desktop
+++ b/kcal/kcal_manager.desktop
@@ -45,6 +45,7 @@ Name[sv]=Kalender
 Name[th]=ปฎิทิน
 Name[tr]=Takvim
 Name[uk]=Календар
+Name[wa]=Calindrî
 Name[x-test]=xxCalendarxx
 Name[zh_CN]=日历
 Name[zh_TW]=行事曆
