--- a/kcal/local.desktop
+++ b/kcal/local.desktop
@@ -42,6 +42,7 @@ Name[sv]=Kalender i lokal fil
 Name[th]=ปฎิทินในแฟ้มภายในระบบ
 Name[tr]=Yerel Dosyadaki Takvim
 Name[uk]=Календар в локальному файлі
+Name[wa]=Calindrî dins on fitchî coinrece
 Name[x-test]=xxCalendar in Local Filexx
 Name[zh_CN]=本地文件中的日历
 Name[zh_TW]=本地端檔案裡的行事曆
