--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -41,6 +41,7 @@ Name[sv]=Resurshantering
 Name[th]=ตัวจัดการทรัพยากร-K
 Name[tr]=KResources Yöneticisi
 Name[uk]=Менеджер KResource-ів
+Name[wa]=Manaedjeu KResources
 Name[x-test]=xxKResources Managerxx
 Name[zh_CN]=KResource 管理器
 Name[zh_TW]=KResources 管理者
@@ -88,6 +89,7 @@ Comment[sv]=Resurshantering
 Comment[th]=ตัวจัดการทรัพยากร
 Comment[tr]=KResources Yöneticisi
 Comment[uk]=Менеджер KResource-ів
+Comment[wa]=Manaedjeu KResources
 Comment[x-test]=xxKResources Managerxx
 Comment[zh_CN]=KResource 管理器
 Comment[zh_TW]=KResources 管理者
