--- a/mailtransport/kcm_mailtransport.desktop
+++ b/mailtransport/kcm_mailtransport.desktop
@@ -54,6 +54,7 @@ Name[sv]=E-postöverföring
 Name[th]=เครื่องมือส่งจดหมาย
 Name[tr]=E-posta Aktarımı
 Name[uk]=Транспортування пошти
+Name[wa]=Berwetaedje d' emile
 Name[x-test]=xxMail Transportxx
 Name[zh_CN]=邮件传送
 Name[zh_TW]=Mail 傳送
