--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -30,6 +30,7 @@ Comment[sr@latin]=Protokol Jabber
 Comment[sv]=Jabber-protokoll
 Comment[th]=โพรโทคอล Jabber
 Comment[uk]=Протокол Jabber
+Comment[wa]=Protocole Jabber
 Comment[x-test]=xxJabber Protocolxx
 Comment[zh_CN]=Jabber 协议
 Comment[zh_TW]=Jabber 協定
@@ -60,6 +61,7 @@ Name[sr@latin]=Jabber
 Name[sv]=Jabber
 Name[th]=Jabber
 Name[uk]=Jabber
+Name[wa]=Jabber
 Name[x-test]=xxJabberxx
 Name[zh_CN]=Jabber
 Name[zh_TW]=Jabber
