--- a/kcal/localdir.desktop
+++ b/kcal/localdir.desktop
@@ -42,6 +42,7 @@ Name[sv]=Kalender i lokal katalog
 Name[th]=ปฎิทินในไดเรกทอรีภายในระบบ
 Name[tr]=Yerel Dizindeki Takvim
 Name[uk]=Календар в локальній теці
+Name[wa]=Calindrî dins on ridant coinrece
 Name[x-test]=xxCalendar in Local Directoryxx
 Name[zh_CN]=本地目录中的日历
 Name[zh_TW]=本地端目錄裡的行事曆
