--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -51,6 +51,7 @@ Name[sv]=KDE-resurser
 Name[th]=ทรัพยากร KDE
 Name[tr]=KDE Kaynakları
 Name[uk]=Ресурси KDE
+Name[wa]=Rissources di KDE
 Name[x-test]=xxKDE Resourcesxx
 Name[zh_CN]=KDE 资源
 Name[zh_TW]=KDE 資源
@@ -98,6 +99,7 @@ Comment[sv]=Anpassa KDE-resurser
 Comment[th]=ปรับแต่งทรัพยากรต่าง ๆ ของ KDE
 Comment[tr]=KDE Kaynaklarını Yapılandır
 Comment[uk]=Налаштування ресурсів даних KDE
+Comment[wa]=Apontyî les rsources di KDE
 Comment[x-test]=xxConfigure KDE Resourcesxx
 Comment[zh_CN]=配置 KDE 资源
 Comment[zh_TW]=設定 KDE 資源
