--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -41,6 +41,7 @@ Name[sv]=Insticksprogram för resurser
 Name[th]=ส่วนเสริม 'จัดการทรัพยากร-K'
 Name[tr]=KResources Eklentisi
 Name[uk]=Додаток до KResources
+Name[wa]=Tchôke-divins KResources
 Name[x-test]=xxKResources Pluginxx
 Name[zh_CN]=KResource 插件
 Name[zh_TW]=KResources 外掛程式
@@ -87,6 +88,7 @@ Comment[sv]=Insticksprogram för resursramverk
 Comment[th]=ส่วนเสริมเฟรมเวิร์ก 'จัดการทรัพยากร-K'
 Comment[tr]=KResources Çalışma Alanı Eklentisi
 Comment[uk]=Додаток до платформи KResources
+Comment[wa]=Tchôke-divins d' evironmint KResources
 Comment[x-test]=xxKResources Framework Pluginxx
 Comment[zh_CN]=KResource 框架插件
 Comment[zh_TW]=KResources 框架外掛程式
