SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1154318

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -29,6 +29,7 @@ Name[sr@latin]=Brzoglasnički protokol K‑adresra
 Name[sv]=Addressbokens direktmeddelandeprotokoll
 Name[th]=โพรโทคอลข้อความด่วนทันใจของสมุดที่อยู่-K
 Name[uk]=Протокол миттєвого обміну повідомленнями KAddressbook
+Name[wa]=Protocole di messaedjreye sol moumint di KAddressbook
 Name[x-test]=xxKAddressbook Instant Messaging Protocolxx
 Name[zh_CN]=KAddressbook 即时通讯协议
 Name[zh_TW]=KAddressbook 即時通訊協定
