--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -31,6 +31,7 @@ Comment[sr@latin]=Protokol AIM
 Comment[sv]=AIM-protokoll
 Comment[th]=โพรโทคอล AIM
 Comment[uk]=Протокол AIM
+Comment[wa]=Protocole AIM
 Comment[x-test]=xxAIM Protocolxx
 Comment[zh_CN]=AIM 协议
 Comment[zh_TW]=AIM 協定
@@ -62,6 +63,7 @@ Name[sr@latin]=AIM
 Name[sv]=AIM
 Name[th]=AIM
 Name[uk]=AIM
+Name[wa]=AIM
 Name[x-test]=xxAIMxx
 Name[zh_CN]=AIM
 Name[zh_TW]=AIM
