--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -31,6 +31,7 @@ Comment[sr@latin]=Protokol Gadu‑Gadu
 Comment[sv]=Gadu-Gadu protokoll
 Comment[th]=โพรโทคอล Gadu-Gadu
 Comment[uk]=Протокол Gadu-Gadu
+Comment[wa]=Protocole Gadu-gadu
 Comment[x-test]=xxGadu-Gadu Protocolxx
 Comment[zh_CN]=Gadu-Gadu 协议
 Comment[zh_TW]=Gadu-Gadu 協定
@@ -62,6 +63,7 @@ Name[sr@latin]=Gadu‑Gadu
 Name[sv]=Gadu-Gadu
 Name[th]=Gadu-Gadu
 Name[uk]=Gadu-Gadu
+Name[wa]=Gadu-Gadu
 Name[x-test]=xxGadu-Gaduxx
 Name[zh_CN]=Gadu-Gadu
 Name[zh_TW]=Gadu-Gadu
