--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -31,6 +31,7 @@ Comment[sr@latin]=Protokol ICQ
 Comment[sv]=ICQ-protokoll
 Comment[th]=โพรโทคอล ICQ
 Comment[uk]=Протокол ICQ
+Comment[wa]=Protocole ICQ
 Comment[x-test]=xxICQ Protocolxx
 Comment[zh_CN]=ICQ 协议
 Comment[zh_TW]=ICQ 協定
@@ -62,6 +63,7 @@ Name[sr@latin]=ICQ
 Name[sv]=ICQ
 Name[th]=ICQ
 Name[uk]=ICQ
+Name[wa]=ICQ
 Name[x-test]=xxICQxx
 Name[zh_CN]=ICQ
 Name[zh_TW]=ICQ
