--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -30,6 +30,7 @@ Comment[sr@latin]=Protokol Meanwhile
 Comment[sv]=Meanwhile-protokoll
 Comment[th]=โพรโทคอล Meanwhile
 Comment[uk]=Протокол Meanwhile
+Comment[wa]=Protocole Meanwhile
 Comment[x-test]=xxMeanwhile Protocolxx
 Comment[zh_CN]=Meanwhile 协议
 Comment[zh_TW]=Meanwhile 協定
@@ -60,6 +61,7 @@ Name[sr@latin]=Meanwhile
 Name[sv]=Meanwhile
 Name[th]=Meanwhile
 Name[uk]=Meanwhile
+Name[wa]=Meanwhile
 Name[x-test]=xxMeanwhilexx
 Name[zh_CN]=Meanwhile
 Name[zh_TW]=Meanwhile
