SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdepimlibs/; revision=1154621

--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo AIM
 Comment[et]=AIM protokoll
 Comment[fr]=Protocole AIM
 Comment[ga]=Prótacal AIM
+Comment[it]=Protocollo AIM
 Comment[km]=ពិធីការ​ AIM ​​
 Comment[nb]=AIM-protokoll
 Comment[nds]=AIM-Protokoll
@@ -46,6 +47,7 @@ Name[es]=AIM
 Name[et]=AIM
 Name[fr]=AIM
 Name[ga]=AIM
+Name[it]=AIM
 Name[km]=AIM​
 Name[nb]=AIM
 Name[nds]=AIM
