--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -14,6 +14,7 @@ Comment[eo]=Interreta plusenda babilado
 Comment[et]=Rühmadiskussioon internetis
 Comment[fr]=Relai Internet de discussion
 Comment[ga]=Internet Relay Chat
+Comment[it]=Internet Relay Chat
 Comment[km]=ជជែកកំសាន្ត​បញ្ជូន​តាម​អ៊ីនធឺណិត​
 Comment[nb]=Internet Relay Chat
 Comment[nds]=Klöönsnack (Internet Relay Chat)
@@ -43,6 +44,7 @@ Name[es]=IRC
 Name[et]=IRC
 Name[fr]=IRC
 Name[ga]=IRC
+Name[it]=IRC
 Name[km]=IRC​
 Name[nb]=IRC
 Name[nds]=IRC
