--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo Meanwhile
 Comment[et]=Meanwhile'i protokoll
 Comment[fr]=Protocole Meanwhile
 Comment[ga]=Prótacal Meanwhile
+Comment[it]=Protocollo Meanwhile
 Comment[km]=ពិធីការ​ Meanwhile
 Comment[nb]=Meanwhile-protokoll
 Comment[nds]=Meanwhile-Protokoll
@@ -45,6 +46,7 @@ Name[es]=Meanwhile
 Name[et]=Meanwhile
 Name[fr]=Meanwhile
 Name[ga]=Meanwhile
+Name[it]=Meanwhile
 Name[km]=Meanwhile
 Name[nb]=Meanwhile
 Name[nds]=Meanwhile
