--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo Yahoo
 Comment[et]=Yahoo protokoll
 Comment[fr]=Protocole Yahoo
 Comment[ga]=Prótacal Yahoo
+Comment[it]=Protocollo Yahoo
 Comment[km]=ពិធីការ​យ៉ាហ៊ូ​
 Comment[nb]=Yahoo-protokoll
 Comment[nds]=Yahoo-Protokoll
@@ -45,6 +46,7 @@ Name[es]=Yahoo
 Name[et]=Yahoo
 Name[fr]=Yahoo
 Name[ga]=Yahoo
+Name[it]=Yahoo
 Name[km]=យ៉ាហ៊ូ​
 Name[nb]=Yahoo
 Name[nds]=Yahoo
