- removed the contact editor for mobile platforms
svn path=/trunk/KDE/kdepimlibs/; revision=1155474

--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -88,10 +88,17 @@ set(akonadicontact_LIB_SRC
   standardcontactformatter.cpp
   waitingoverlay.cpp
   ${akonadicontact_actions_SRCS}
-  ${akonadicontact_editor_SRCS}
 )
-
+if(NOT KDE_PLATFORM_PROFILE STREQUAL "Mobile")
+set(akonadicontact_LIB_SRC
+    ${akonadicontact_LIB_SRC}
+    ${akonadicontact_editor_SRCS}
+)
 qt4_wrap_ui(akonadicontact_LIB_SRC contactgroupeditor.ui)
+else(NOT KDE_PLATFORM_PROFILE STREQUAL "Mobile")
+add_definitions(-DDISABLE_EDITOR_WIDGES)
+endif(NOT KDE_PLATFORM_PROFILE STREQUAL "Mobile")
+
 kde4_add_kcfg_files(akonadicontact_LIB_SRC recentcontactscollectionssettings.kcfgc )
 
 kde4_add_library(akonadi-contact SHARED ${akonadicontact_LIB_SRC})
