--- a/kcalcore/CMakeLists.txt
+++ b/kcalcore/CMakeLists.txt
@@ -77,7 +77,7 @@ set(kcalcore_LIB_SRCS ${libversit_SRCS}
 )
 
 
-kde4_add_library(kcalcore SHARED ${kcalcore_LIB_SRCS})
+kde4_add_library(kcalcore ${LIBRARY_TYPE} ${kcalcore_LIB_SRCS})
 
 target_link_libraries(kcalcore kpimutils ${KDE4_KDECORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${LIBICAL_LIBRARIES})
 if(HAVE_UUID_UUID_H)
