--- a/akonadi/kabc/CMakeLists.txt
+++ b/akonadi/kabc/CMakeLists.txt
@@ -11,7 +11,7 @@ set( kabcakonadi_LIB_SRC
   contactparts.cpp
 )
 
-kde4_add_library( akonadi-kabc SHARED ${kabcakonadi_LIB_SRC} )
+kde4_add_library( akonadi-kabc ${LIBRARY_TYPE} ${kabcakonadi_LIB_SRC} )
 
 target_link_libraries( akonadi-kabc akonadi-kde ${QT_QTGUI_LIBRARY} ${KDE4_KDECORE_LIBS} ${KDE4_KABC_LIBS} )
 set_target_properties( akonadi-kabc PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
