--- a/mailtransport/CMakeLists.txt
+++ b/mailtransport/CMakeLists.txt
@@ -58,7 +58,7 @@ kde4_add_ui_files(mailtransport_lib_srcs
 )
 kde4_add_kcfg_files(mailtransport_lib_srcs transportbase.kcfgc)
 
-kde4_add_library(mailtransport SHARED ${mailtransport_lib_srcs})
+kde4_add_library(mailtransport ${LIBRARY_TYPE} ${mailtransport_lib_srcs})
 target_link_libraries(mailtransport ${KDE4_KIO_LIBS} akonadi-kde akonadi-kmime kmime )
 set_target_properties(mailtransport PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
 
